docs: add info about packing