@@ -1,7 +1,9 @@
 # jodoro
+
 A pomodoro desktop application.
 
 ## building locally
+
 Create the `target` directory
 
 ```
@@ -14,8 +16,37 @@ then you can run the JAR
 java -jar target/jodoro-<version>.jar
 ```
 
+### building the installer for macOS
+
+If you're on macOS, you can install jodoro under Applications by first creating the installer with
+`jpackage`:
+
+```
+jpackage \
+   --input target \
+   --name jodoro \
+   --main-jar jodoro-<version>.jar \
+   --type dmg \
+   --java-options '--enable-preview'
+```
+
+and install the application like you would with any other `.dmg` file.
+
+### building the installer for Linux
+
+To create a `.pkg` with `jpackage` run the following:   
+
+```
+jpackage \
+   --input target \
+   --name jodoro \
+   --main-jar jodoro-<version>.jar \
+   --type pkg \
+   --java-options '--enable-preview'
+``` 
 
 ## to do
+
 * keyboard shortcuts (lots of them)
 * de-clutter gui constructor
 * graphs for # of sessions 
@@ -26,3 +57,4 @@ java -jar target/jodoro-<version>.jar
 * add icons for play & pause buttons
 * add quick settings in settings pane
 * add a second sound if timer is not respected
+* add workflow using `jpackage`
